--- a/CameraXApp-Reroll2/app/src/main/res/layout/activity_main.xml
+++ b/CameraXApp-Reroll2/app/src/main/res/layout/activity_main.xml
@@ -90,5 +90,75 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <!-- 调试控件 -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/debugPanel"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent">
+
+        <!-- 最大模糊半径调节 -->
+        <TextView
+            android:id="@+id/tvMaxBlur"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="最大半径:30px"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            android:layout_marginStart="16dp"/>
+
+        <SeekBar
+            android:id="@+id/seekMaxBlur"
+            android:layout_width="200dp"
+            android:layout_height="wrap_content"
+            android:max="50"
+            app:layout_constraintStart_toEndOf="@id/tvMaxBlur"
+            app:layout_constraintTop_toTopOf="@id/tvMaxBlur"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginStart="8dp"/>
+
+        <!-- 曲线陡峭度调节 -->
+        <TextView
+            android:id="@+id/tvSteepness"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="陡峭度:15"
+            app:layout_constraintStart_toStartOf="@id/tvMaxBlur"
+            app:layout_constraintTop_toBottomOf="@id/tvMaxBlur"
+            android:layout_marginTop="8dp"/>
+
+        <SeekBar
+            android:id="@+id/seekSteepness"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:max="30"
+            app:layout_constraintStart_toStartOf="@id/seekMaxBlur"
+            app:layout_constraintEnd_toEndOf="@id/seekMaxBlur"
+            app:layout_constraintTop_toTopOf="@id/tvSteepness"/>
+
+        <!-- 激活偏移调节 -->
+        <TextView
+            android:id="@+id/tvOffset"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="偏移:5%"
+            app:layout_constraintStart_toStartOf="@id/tvSteepness"
+            app:layout_constraintTop_toBottomOf="@id/tvSteepness"
+            android:layout_marginTop="8dp"/>
+
+        <SeekBar
+            android:id="@+id/seekOffset"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:max="20"
+            app:layout_constraintStart_toStartOf="@id/seekSteepness"
+            app:layout_constraintEnd_toEndOf="@id/seekSteepness"
+            app:layout_constraintTop_toTopOf="@id/tvOffset"/>
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
 
